css/main.scss
$yellow: #fc6;
$green: #9c9;
$red: #f2777a;
$blue: #69c;
$grey: #f2f0ec;
$dark-grey: #515151;
$cyan: #6cc;
$white: #fff;

%button {
    background:     $grey;
    border:         1px solid transparent;
    border-radius:  .25rem;
    cursor:         pointer;
    display:        inline-block;
    font-family:    sans-serif;
    font-size:      1rem;
    font-weight:    400;
    padding:        1rem;
    text-align:     center;
    transition:     all ease .5s;
    vertical-align: middle;
    white-space:    nowrap;

    &:hover {
        background: $cyan;
    }
}

%input {
    -o-transition:      border-color ease-in-out .15s,box-shadow ease-in-out .15s;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
    background-color:   $white;
    background-image:   none;
    border-radius:      .25rem;
    border:             1px solid $grey;
    box-shadow:         inset 0 1px 1px $grey;
    color:              $dark-grey;
    display:            block;
    font-size:          1rem;
    padding:            1rem;
    transition:         border-color ease-in-out .15s,box-shadow ease-in-out .15s;
    width:              100%;
}

%space-between {
    display:         flex;
    justify-content: space-between;
    padding:         .5rem;
}

body {
    font-family:     sans-serif;
    justify-content: center;
    margin:          0 auto;
    max-width:       45rem;
}

.todo {
    list-style-type: none;
    margin:          0;
    padding:         .5rem;

    &__item {
        border:        1px solid $grey;
        border-radius: .25rem;
        color:         $red;
        cursor:        pointer;
        display:       block;
        margin:        .5rem 0;
        padding:       1rem;
        transition:    box-shadow ease-in-out .3s;
        // transition:    all ease-in-out 1s;

        &--completed {
            color: $green;

            &::before {
                content:       '\2713';
                display:       inline-block;
                padding-right: .5rem;
            }
        }

        &:hover,
        &:focus {
            box-shadow: inset 0 1px 1px $yellow;
        }
    }

    &__new--form {
        @extend %space-between;

        button {
            margin: 0;
        }
    }
}

button {
    @extend %button;
}

.filter {
    @extend %space-between;
}
.button {
    @extend %button;

    &--active {
        background: $blue;
        color:      $grey;
        cursor:     default;

        &:hover {
            background: $blue;
        }
    }
}

.clear {
    .button {
        &--active {
            display: none;
        }
    }
}

input {
    @extend %input;
}

.align-center {
    text-align: center;
}

